# pop_up_slam

./: README.md  download_data.sh  install_dependenices.sh  py_requirements.txt
dependency/: README.md
dependency/numpy_opencv/: CMakeLists.txt  package.xml  readme.md  setup.py
dependency/numpy_opencv/examples/: ex1.py
dependency/numpy_opencv/python/numpy_opencv/: __init__.py
dependency/numpy_opencv/src/: np_opencv_converter.cpp  np_opencv_converter.hpp  np_opencv_module.cpp
dependency/numpy_opencv/src/utils/: container.h  conversion.cpp  conversion.h  template.h
dependency/odom_tf_utils/: CMakeLists.txt  README.md  package.xml
dependency/odom_tf_utils/launch/: odom_to_tf.launch  tf_to_odom.launch
dependency/odom_tf_utils/src/: odom_ned_tf.cpp  odom_to_tf.cpp  tf_to_odom.cpp
dependency/python_module/: README.md
dependency/python_module/cmake/: add_python_export_library.cmake
dependency/tictoc_profiler/: .gitignore
line_lbd/: CMakeLists.txt  package.xml  readme.md
line_lbd/class/: line_lbd_allclass.cpp
line_lbd/include/line_lbd/: line_lbd_allclass.h
line_lbd/launch/: line_detect.launch
line_lbd/src/: detect_lines.cpp
pop_planar_slam/: .gitignore  CMakeLists.txt  README.md  package.xml
pop_planar_slam/launch/: pop_planar_tum_far.launch  pop_planar_tum_far_example.launch
pop_planar_slam/params/: ORB_Settings.yaml  plane_3d_tum_far.yaml
pop_planar_slam/rviz/: pop_slam.rviz
pop_planar_slam/src/: Frame.cpp  Frame.h  Map_plane.cpp  Map_plane.h  Mapping.cpp  Mapping.h  isam_plane3d.cpp  isam_plane3d.h  main_3d.cpp
pop_up_python/: .gitignore  CMakeLists.txt  LICENSE  README.md  install_dependenices.sh  package.xml  requirements.txt  setup.py
pop_up_python/python/pop_up_python/: __init__.py  pop_up_fun.py
pop_up_wall/: CMakeLists.txt  README.md  package.xml
pop_up_wall/include/pop_up_wall/: matrix_utils.h  popup_plane.h
pop_up_wall/launch/: pop_main.launch  pop_main_sample.launch
pop_up_wall/libs/: matrix_utils.cpp  popup_plane.cpp  select_edge.cpp
pop_up_wall/params/: popup_param.yaml  popup_tum_far.yaml
pop_up_wall/rviz/: pop_show.rviz
pop_up_wall/src/: popup_plane_main.cpp
