<?xml version="1.0"?>
<package>
  <name>odom_tf_utils</name>
  <version>0.0.0</version>
  <description>node to convert odometry into TF and vice versa</description>
  <maintainer email="sezaljain90@gmail.com">sezal</maintainer>s
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>
</package>
